
Kajetan Krykwiński added support for the Apator E-ITN heat cost allocator. Thanks Kajetan!

Improved wmbusmeters to gracefully handle bad telegrams with multiple difvif entries
matching the same field. This used to trigger an assert, now the first matching field is used.

Rename option --device=xyz to --overridedevice=xyz and add better error message
if it is used without --useconfig=xyz. --device still works but will eventually be removed.

OPTIONAL fields were only printed in the json, if they appeared in the telegram,
even if the field had received a value before. Now a field will be printed
in the json whenever there is a value stored in the meter object.
I.e. an OPTIONAL field that has never received a value will not be printed.
A NON-OPTIONAL field that has never received a value will be printed with the value null.

Version: 1.9.0 2022-09-04

ATTENTION! The multical21 and flowiq drivers have been refactored to the new driver style.

Since the multical21 driver was the first driver ever written, it had some idiosynchrasies.
The json should be entirely backwards compatible but when format=fields is used, the
status field no longer has the days, eg "DRY(22-31 days)" is now just "DRY"
use the json or selectfields=time_dry to get how long it has been dry.

Added check for existance of difvif varlen length byte before reading it. Found by fuzzing.

Thecem added support for the Multical 303 heat meter. Thanks thescem!

Improve minomess driver to handle telegrams from wired m-bus module.

Added Enercal F2 heat meter.

Paulo Rossi added support for the AMB3665-M wmbus dongle for N-mode 169 MHz telegrams. Thanks Paulo!

Version 1.8.0: 2022-06-25

ATTENTION! Counter suffix _int is changed to _counter.
New fields are added to lansendw, lansenpu, qsmoke drivers.
Eventually the old fields will go away in drivers.

ATTENTION! When a field is not optional in the driver description,
but alas, no data has arrived in the telegram, then the json now